# bevy-p2p

./: .editorconfig  .rustfmt.toml  Cargo.toml
src/: main.rs  resources.rs
src/game/: components.rs  mod.rs  resources.rs  systems.rs
src/menu/: components.rs  mod.rs  resources.rs  systems.rs  ui.rs
src/shared/: despawn.rs  mod.rs  ui.rs
