[package]
resolver = "2"
name = "vide"
version = "0.1.0"
edition = "2021"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "MIT"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }

[lints.clippy]
approx_constant = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = true
opt-level = 3
codegen-units = 1
